crates/math-core/tests/snapshots/custom_cmd_test__late_resolution_unbraced_body.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand\\foo\\epsilon\\renewcommand\\epsilon{e}\\foo"
---
<math>
    <mi>e</mi>
</math>
