crates/math-core/tests/snapshots/custom_cmd_test__let_across_snippets.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\zz \\oldzz"
---
<math>
    <mi>ℚ</mi>
    <mi>ℤ</mi>
</math>
