crates/math-core/tests/snapshots/custom_cmd_test__let_chain.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\let\\a\\alpha\\let\\b\\a\\renewcommand{\\a}{x}\\a\\b"
---
<math>
    <mi>x</mi>
    <mi>α</mi>
</math>
