crates/math-core/tests/snapshots/custom_cmd_test__let_command_with_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\let\\f\\frac\\f{1}{2}"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
