crates/math-core/tests/snapshots/custom_cmd_test__let_does_not_follow_redefinition.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\let\\a\\alpha\\renewcommand{\\alpha}{\\beta}\\a"
---
<math>
    <mi>α</mi>
</math>
