crates/math-core/tests/snapshots/custom_cmd_test__let_overwrites_newcommand.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\a}{x}\\let\\a\\alpha\\a"
---
<math>
    <mi>α</mi>
</math>
