crates/math-core/tests/snapshots/custom_cmd_test__let_plain.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\let\\a\\alpha\\a"
---
<math>
    <mi>α</mi>
</math>
