crates/math-core/tests/snapshots/custom_cmd_test__let_to_custom_cmd.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\m}[1]{\\sqrt{#1}}\\let\\n\\m\\n{2}"
---
<math>
    <msqrt>
        <mn>2</mn>
    </msqrt>
</math>
